Fixed main z-index

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -10,6 +10,7 @@ header {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	z-index: 1;
 
 	.profile {
 		width: calc(var(--header-height) * 0.6);
